--- a/scss/modules/events.scss
+++ b/scss/modules/events.scss
@@ -75,7 +75,7 @@
   }
 
   .event-image {
-    @media (max-width: #{$screen-tablet}) {
+    @media (max-width: #{$screen-xs-max}) {
       display: none;
     }
 
