--- a/scss/modules/footer.scss
+++ b/scss/modules/footer.scss
@@ -67,7 +67,7 @@
     font-size: 16px;
     padding-left: 0;
 
-    @media (max-width: #{$screen-tablet}) {
+    @media (max-width: #{$screen-xs-max}) {
       flex-basis: 50%;
       margin-bottom: 35px;
     }
